fix: Fix unreadable text in high-contrast-mode (#35032)

--- a/app/javascript/styles/contrast/diff.scss
+++ b/app/javascript/styles/contrast/diff.scss
@@ -37,10 +37,6 @@
   color: $highlight-text-color;
 }
 
-.nothing-here {
-  color: $darker-text-color;
-}
-
 .report-dialog-modal__textarea::placeholder {
   color: $inverted-text-color;
 }
